--- a/app/view/default/layout/nav.Twig
+++ b/app/view/default/layout/nav.Twig
@@ -1,6 +1,6 @@
 <nav class="bulma-navbar px-4" role="navigation" aria-label="main navigation">
 	<div class="bulma-navbar-brand">
-		<a class="bulma-navbar-item" href="/">
+		<a class="bulma-navbar-item w-15 h-15" href="/">
 			<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 			     width="800px" height="800px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 				<g>
@@ -98,7 +98,7 @@
 			{% if not currentUser %}
 				<div class="bulma-navbar-item">
 					<div class="bulma-buttons">
-						<a class="bulma-button" href="/user/login">
+						<a class="bulma-button bulma-is-small" href="/user/login">
 							登录
 						</a>
 					</div>
