--- a/app/view/default/memo/save.Twig
+++ b/app/view/default/memo/save.Twig
@@ -37,7 +37,7 @@
 			</div>
 			<div class="bulma-field">
 				<div class="bulma-control">
-					<textarea class="bulma-textarea" style="height:300px;" id="contentMD" placeholder="支持markdown语法"></textarea>
+					<textarea class="bulma-textarea bulma-is-small" style="height:300px;" id="contentMD" placeholder="支持markdown语法"></textarea>
 				</div>
 				{% if exception starts with '内容' %}
 					<p class="bulma-help bulma-is-danger">{{ exception }}</p>
@@ -45,10 +45,10 @@
 			</div>
 			<div class="bulma-field bulma-is-grouped">
 				<div class="bulma-control">
-					<button class="bulma-button is-link is-small">
+					<button class="bulma-button bulma-is-link bulma-is-small">
 						<span>发言</span>
 					</button>
-					<a class="bulma-button is-small" href="/">
+					<a class="bulma-button bulma-is-small" href="/">
 						<span>返回</span>
 					</a>
 				</div>
