--- a/app/view/default/index.Twig
+++ b/app/view/default/index.Twig
@@ -23,13 +23,12 @@
 	<script type="module">
       // 指定确切的版本号
       import { codeToHtml } from 'https://esm.sh/shiki@1.0.0'
-
       $("code[class^='language']").each(async function(){
           const lang = $(this).attr('class').replaceAll("language-","")
 		      const code = $(this).text()
           $(this).parent().replaceWith(await codeToHtml(code, {
               lang: lang,
-              theme: 'nord'
+              theme: 'catppuccin-macchiato'
           }))
       })
 
