--- a/app/view/default/component/memo.Twig
+++ b/app/view/default/component/memo.Twig
@@ -7,7 +7,7 @@
 			{{ memo.author.nickname }}
 		</a>
 
-		<div class="text-wrap break-all max-h-[400px] overflow-hidden markdown-body" data-content="{{ memo.id }}">
+		<div class="py-2 text-wrap break-all max-h-[400px] overflow-hidden markdown-body" data-content="{{ memo.id }}">
 			{{ memo.content_html|raw }}
 		</div>
 
