--- a/app/view/default/index.Twig
+++ b/app/view/default/index.Twig
@@ -12,10 +12,10 @@
 {% endblock %}
 
 {% block afterScript %}
-	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+	<script src="https://cdn.mblog.club/mm/fancybox.umd.js"></script>
 	<link
 			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+			href="https://cdn.mblog.club/mm/fancybox.css"
 	/>
 	<script src="/js/main.js">
 	</script>
