--- a/app/view/default/layout/base.Twig
+++ b/app/view/default/layout/base.Twig
@@ -6,9 +6,9 @@
 	<title>{% block title %} {% endblock %}</title>
 	<link rel="shortcut icon" type="image/png" href="{{ sysConfig.favicon }}">
 	<script src="https://cdn.mblog.club/mm/unocss.min.js"></script>
-	<link rel="stylesheet" href="/css/bulma.min.css">
 	<script src="https://cdn.mblog.club/mm/jquery.min.js"></script>
 	<script src="https://cdn.mblog.club/mm/jquery.form.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.mblog.club/mm/bulma.min.css">
 	{% include 'default/layout/header.Twig' %}
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="/css/md.css">
