--- a/app/view/default/memo/save.Twig
+++ b/app/view/default/memo/save.Twig
@@ -58,8 +58,8 @@
 {% endblock %}
 
 {% block beforeScript %}
-	<script src="https://cdn.jsdelivr.net/npm/markdown-it@14.1.0/dist/markdown-it.min.js"></script>
-	<script src="/js/textarea.min.js"></script>
+	<script src="https://cdn.mblog.club/mm/markdown-it.min.js"></script>
+	<script src="https://cdn.mblog.club/mm/textarea.min.js"></script>
 {% endblock %}
 
 {% block afterScript %}
