--- a/app/view/default/memo/save.Twig
+++ b/app/view/default/memo/save.Twig
@@ -72,6 +72,7 @@
       $contentMD.on('input',function(){
         $("input[name='contentHtml']").val(md.render($contentMD.val()));
       })
+      $("input[name='contentHtml']").val(md.render($contentMD.val()));
 
 
 	    $("#bold").on('click',function (){
