--- a/app/view/default/user/mine.Twig
+++ b/app/view/default/user/mine.Twig
@@ -11,7 +11,7 @@
 					<div class="username text-lg font-bold text-white">Jerry</div>
 					<img src="{{ user.avatar_url }}"
 					     class="avatar w-[70px] h-[70px] rounded-xl"></div>
-				<div class="slogon text-gray truncate w-full text-end text-xs mt-2">{{ user.slogan }}</div>
+				<div class="slogan text-gray truncate w-full text-end text-xs mt-2">{{ user.slogan }}</div>
 			</div>
 		</div>
 	</div>
