--- a/app/view/default/user/settings.Twig
+++ b/app/view/default/user/settings.Twig
@@ -63,7 +63,7 @@
 		<div class="bulma-field">
 			<label for="password" class="bulma-label bulma-is-small">密码</label>
 			<div class="bulma-bulma-control">
-				<input class="bulma-input bulma-is-small" type="password" name="password" placeholder="不修改留空,修改密码需要重新登录">
+				<input class="bulma-input bulma-is-small" autocomplete="off" type="password" name="password" placeholder="不修改留空,修改密码需要重新登录">
 			</div>
 		</div>
 
