--- a/app/view/default/layout/header.Twig
+++ b/app/view/default/layout/header.Twig
@@ -1,2 +1,2 @@
-<link rel="stylesheet" type="text/css" href="https://cdn.mblog.club/mm/toastify.min.css">
-<script type="text/javascript" src="https://cdn.mblog.club/mm/toastify-js.min.js"></script>
+<link rel="stylesheet" type="text/css" href="{{ getStaticPath('/css/toastify.min.css')}}">
+<script type="text/javascript" src="{{ getStaticPath('/js/toastify-js.min.js') }}"></script>
