--- a/app/view/default/sysSettings.Twig
+++ b/app/view/default/sysSettings.Twig
@@ -52,53 +52,53 @@
 			</div>
 		</div>
 
-{#		<section>#}
-{#			<div class="mb-2 flex justify-between items-center cursor-pointer" id="toggleS3Btn">#}
-{#				<h2 class="font-bold ">S3相关配置</h2>#}
-{#				<svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"#}
-{#				     viewBox="0 0 32 32">#}
-{#					<path d="M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z" fill="currentColor"></path>#}
-{#				</svg>#}
-{#			</div>#}
-{#			<div class="p-4 border rounded border-gray-300 border-solid hidden" id="s3Config">#}
-{#				<div class="bulma-field">#}
-{#					<label for="s3_key" class="bulma-label bulma-is-small">Access Key</label>#}
-{#					<div class="bulma-control">#}
-{#						<input class="bulma-input bulma-is-small" type="text" name="ak" value="{{ data.config.ak }}">#}
-{#					</div>#}
-{#				</div>#}
-{#				<div class="bulma-field">#}
-{#					<label for="s3_secret" class="bulma-label bulma-is-small">Secret Key</label>#}
-{#					<div class="bulma-control">#}
-{#						<input class="bulma-input bulma-is-small" type="text" name="sk" value="{{ data.config.sk }}">#}
-{#					</div>#}
-{#				</div>#}
-{#				<div class="bulma-field">#}
-{#					<label for="s3_secret" class="bulma-label bulma-is-small">域名</label>#}
-{#					<div class="bulma-control">#}
-{#						<input class="bulma-input bulma-is-small" type="text" name="domain" value="{{ data.config.domain }}">#}
-{#					</div>#}
-{#				</div>#}
-{#				<div class="bulma-field">#}
-{#					<label for="endpoint" class="bulma-label bulma-is-small">S3 Endpoint</label>#}
-{#					<div class="bulma-control">#}
-{#						<input class="bulma-input bulma-is-small" type="text" name="endpoint" value="{{ data.config.endpoint }}">#}
-{#					</div>#}
-{#				</div>#}
-{#				<div class="bulma-field">#}
-{#					<label for="bucket" class="bulma-label bulma-is-small">桶名称</label>#}
-{#					<div class="bulma-control">#}
-{#						<input class="bulma-input bulma-is-small" type="text" name="bucket" value="{{ data.config.bucket }}">#}
-{#					</div>#}
-{#				</div>#}
-{#				<div class="bulma-field">#}
-{#					<label for="suffix" class="bulma-label bulma-is-small">后缀</label>#}
-{#					<div class="bulma-control">#}
-{#						<input class="bulma-input bulma-is-small" type="text" name="suffix" value="{{ data.config.suffix }}">#}
-{#					</div>#}
-{#				</div>#}
-{#			</div>#}
-{#		</section>#}
+		<section>
+			<div class="mb-2 flex justify-between items-center cursor-pointer" id="toggleS3Btn">
+				<h2 class="font-bold ">S3相关配置</h2>
+				<svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+				     viewBox="0 0 32 32">
+					<path d="M16 22L6 12l1.4-1.4l8.6 8.6l8.6-8.6L26 12z" fill="currentColor"></path>
+				</svg>
+			</div>
+			<div class="p-4 border rounded border-gray-300 border-solid hidden" id="s3Config">
+				<div class="bulma-field">
+					<label for="s3_key" class="bulma-label bulma-is-small">Access Key</label>
+					<div class="bulma-control">
+						<input class="bulma-input bulma-is-small" type="text" name="ak" value="{{ data.config.ak }}">
+					</div>
+				</div>
+				<div class="bulma-field">
+					<label for="s3_secret" class="bulma-label bulma-is-small">Secret Key</label>
+					<div class="bulma-control">
+						<input class="bulma-input bulma-is-small" type="text" name="sk" value="{{ data.config.sk }}">
+					</div>
+				</div>
+				<div class="bulma-field">
+					<label for="s3_secret" class="bulma-label bulma-is-small">域名</label>
+					<div class="bulma-control">
+						<input class="bulma-input bulma-is-small" type="text" name="domain" value="{{ data.config.domain }}">
+					</div>
+				</div>
+				<div class="bulma-field">
+					<label for="endpoint" class="bulma-label bulma-is-small">S3 Endpoint</label>
+					<div class="bulma-control">
+						<input class="bulma-input bulma-is-small" type="text" name="endpoint" value="{{ data.config.endpoint }}">
+					</div>
+				</div>
+				<div class="bulma-field">
+					<label for="bucket" class="bulma-label bulma-is-small">桶名称</label>
+					<div class="bulma-control">
+						<input class="bulma-input bulma-is-small" type="text" name="bucket" value="{{ data.config.bucket }}">
+					</div>
+				</div>
+				<div class="bulma-field">
+					<label for="suffix" class="bulma-label bulma-is-small">后缀</label>
+					<div class="bulma-control">
+						<input class="bulma-input bulma-is-small" type="text" name="suffix" value="{{ data.config.suffix }}">
+					</div>
+				</div>
+			</div>
+		</section>
 
 
 
